fix extra spaces

--- a/src/scss/components/_alerts.scss
+++ b/src/scss/components/_alerts.scss
@@ -15,7 +15,7 @@
   }
 
   figcaption {
-    margin-left: 32px;
+    display: flex;
   }
 
   /* Specific Alert Styles */
